Added implementation of subtype checking for checking an ArgType with only one arg.